Mer logging for å finne ut av vrien feil som oppstår når saksbehandler avklarer lønnsendring i fakta om beregning (#4172)